fix horizontal scroll

--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -5,6 +5,8 @@ body {
   font-style: normal;
   line-height: $line-h-base-size;
   background: $color-bg-main;
+  // hack
+  overflow: hidden;
 }
 
 img {
