--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -13,7 +13,6 @@
   font-family: $font-open-sans;
   font-weight: bold;
   display: block;
-  padding-right: 30px;
   color: $color-fnt-alternative;
   background: $color-bg-main;
   @include font($fnt-form-title, $line-h-form-title);
@@ -21,12 +20,13 @@
   position: relative;
   width: auto;
 
-  &::after {
+  &::before {
     content: "";
-    width: calc(100% - 2*30px);
+    width: 100%;
     position: absolute;
-    border: 1px solid $color-fnt-alternative;
+    border-top: 1px solid $color-fnt-alternative;
     top: 50%;
+    left: 0;
     box-sizing: border-box;
   }
 }
@@ -34,6 +34,7 @@
 .form__title-element {
   padding-right: 20px;
   background: $color-bg-main;
+  position: relative;
 }
 
 .form__radio-label,
@@ -80,8 +81,8 @@
   border-radius: 50%;
 }
 
-#accessory:checked + label::after,
-#toy:checked + label::after {
+.form__input:checked + label::after,
+.form__input:checked + label::after {
   position: absolute;
   top: 50%;
   left: 23px;
@@ -188,7 +189,7 @@
     align-self: flex-start;
     box-sizing: border-box;
 
-    &::after {
+    &::before {
       content: none;
     }
   }
@@ -212,6 +213,7 @@
 
   .form__radio-label {
     flex: 1 0 100%;
+    box-sizing: border-box;
   }
 
   .form__type--checkbox {
