--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -24,7 +24,7 @@
       height: 39px;
       width: 100%;
       content: '';
-      background-image: url('../img/wave-up.png');
+      background-image: url('../img/wave.png');
       background-repeat: repeat-x;
       background-position: -9px 2px;
       background-size: 39px 23px;
